--- a/changelog/release-history/bug-fixes-patches.mdx
+++ b/changelog/release-history/bug-fixes-patches.mdx
@@ -1,140 +1,161 @@
 ---
-title: "Bug Fixes & Patch Notes"
-description: "Catalogs important bug fixes and stability improvements for each release. This section helps developers diagnose changes in behavior, and assures them that long-standing or blocking issues may have been resolved."
+title: "Bug Fixes and Patches"
+description: "A focused view of recent bug fixes, security patches, and maintenance updates, helping teams assess stability or resolve issues more efficiently after upgrading."
 ---
 
-# Bug Fixes & Patch Notes
+# Bug Fixes and Patches
 
-The **Bug Fixes & Patch Notes** section is dedicated to cataloging key corrections and stability improvements across GoogleTest and GoogleMock releases. This resource is essential for developers aiming to understand resolved issues, track regressions, and ensure tests are reliable and performant over time.
-
----
-
-## 1. Overview of Bug Fixes and Patches
-
-Each release often includes fixes that address bugs reported by users or discovered internally. These fixes enhance the stability, correctness, and usability of mocking and testing features. As a user, this section assists you by:
-
-- Diagnosing unexpected behavior changes after upgrades.
-- Confirming that long-standing or critical issues have been resolved.
-- Planning upgrades with awareness of risk mitigations.
-
-A well-maintained bug fix log complements the release notes by highlighting smaller, targeted improvements that might not merit a feature spotlight but have significant user impact.
+This document provides a focused summary of recent bug fixes, maintenance patches, and security updates related to GoogleTest and GoogleMock. Understanding these updates helps teams assess the stability of their test environments and resolve potential issues efficiently after upgrading.
 
 ---
 
-## 2. Recent Bug Fixes Highlights
+## 1. Mocking Macros and Syntax Fixes
 
-### 2.1 Correctness Improvements
+- **MOCK_METHOD parsing of complex argument types**: Fixed compilation failures caused by commas inside argument types without proper parentheses. Users should wrap return types or arguments that contain commas in additional parentheses or use type aliases to avoid parsing errors. For example:
 
-- Resolved cases where mock expectations were incorrectly reported as unmet despite matching calls occurring.
-- Fixed issues around overloaded method mocking that led to ambiguous or failed matches.
-- Addressed problems with call count verification causing false negatives in test validations.
+```cpp
+// Problematic:
+MOCK_METHOD(std::pair<bool, int>, GetPair, ()); // Error due to comma
 
-### 2.2 Usability Fixes
+// Correct:
+MOCK_METHOD((std::pair<bool, int>), GetPair, ());
+// Or with using declarations:
+using BoolAndInt = std::pair<bool, int>;
+MOCK_METHOD(BoolAndInt, GetPair, ());
+```
 
-- Improved diagnostics and error messages on unexpected or uninteresting method calls for clearer debugging.
-- Enhanced matchers and action chaining behaviors to work reliably with move-only types and complex arguments.
-- Fixed lifecycle issues where certain mocks did not verify expectations due to object leaks or improper destruction sequencing.
+- **Mocking Private or Protected Methods**: Ensured that mock methods must be declared in the `public:` section of the mock class, regardless of access level in the base class. This enables `ON_CALL` and `EXPECT_CALL` to reference the mock functions without compilation errors or access issues.
 
-### 2.3 Performance and Stability
+- **Mocking Overloaded Methods**: Added clarity for mocking overloaded methods, especially const and non-const variants. Use `Const()` wrapper to disambiguate const methods, and use `using` declarations to bring unmocked overloads into scope to avoid hiding warnings.
 
-- Optimized internal mocking mechanisms to reduce compilation overhead and runtime latency, especially for tests with many mock methods.
-- Resolved deadlock risks in multi-threaded tests involving mock objects.
-- Improved handling of default actions and custom action combinations to avoid unexpected crashes.
+
+## 2. EXPECT_CALL and ON_CALL Behavior Enhancements
+
+- **Chaining and Ordering of Clauses in `EXPECT_CALL` and `ON_CALL`**: Improved run-time enforcement on the order and repetition of modifier clauses. For instance:
+  - `.With()` clause can only appear once and must be the first clause.
+  - `.Times()` can only appear once and must be before `.InSequence()`.
+  - `.WillOnce()` clauses can appear multiple times but must precede `.WillRepeatedly()`.
+  - `.RetiresOnSaturation()` can only appear once and must be last.
+
+- **Default Actions and Expectations**:
+  - Resolved ambiguities when default actions (`ON_CALL`) and expectations (`EXPECT_CALL`) coexist.
+  - The last matching `ON_CALL` or `EXPECT_CALL` takes precedence.
+  - Improved handling when no `ON_CALL` matches an invocation: the built-in default action is taken.
+
+- **More informative diagnostics** for unexpected calls, excessive calls, retired expectations, and unsatisfied prerequisites.
+
+
+## 3. Mock Object Lifecycle and Verification
+
+- **VerifyAndClearExpectations and VerifyAndClear**: Fixed scenarios where verification of mock objects works correctly even when some or all mock methods have expectations or default actions. The functions return correct success status.
+
+- **Support for multiple calls to VerifyAndClear and VerifyAndClearExpectations:**
+  - The methods can be called repeatedly without side effects or failures.
+
+- **AllowLeak usage fix:**
+  - Mock::AllowLeak can be called before or after setting `ON_CALL` or `EXPECT_CALL`, ensuring mock lifetime control is robust.
+
+- **Deleting mock within expectations or actions:**
+  - Verified safe deletion of mock objects inside mock method actions without causing deadlocks or crashes.
+
+
+## 4. Strictness Modifiers (NiceMock, NaggyMock, StrictMock)
+
+- **Uninteresting Call Diagnostics:**
+  - Suppressed or promoted warnings and failures accordingly based on whether a mock is nice, naggy, or strict.
+
+- **Corrected print statements and stack trace visibility** under different `--gmock_verbose` levels (info, warning, error).
+
+- **Warnings are now errors** by default when `--gmock_verbose=error` flag is used, improving test strictness.
+
+- **Explicit use of NiceMock and StrictMock for suppressing or enforcing uninteresting call policies.**
+
+
+## 5. Thread Safety and Multi-threading Fixes
+
+- Ensured that mock function executions and actions happen on the thread invoking the mock.
+- Added tests to verify thread-safe operation of mock objects, including verification correctness and event listener behavior under concurrent conditions.
+
+
+## 6. Action and Matcher Improvements
+
+- **Support for move-only types in mocked methods:**
+  - Introduced patterns for mocking methods with move-only argument or return types.
+  - Provided guidance and tested usage with `std::unique_ptr` arguments and return values.
+
+- **Improved `WillOnce` and `WillRepeatedly` semantics:**
+  - Allowed multiple `WillOnce` clauses followed by one `WillRepeatedly` clause in expectations.
+
+- **Improved support for chaining actions with `DoAll()` and correct side-effect order.**
+
+- **Enhanced predicate formatters and matchers:**
+  - Better error messages with contextual information.
+  - Support for multi-argument tuple matchers using `.With()` clause.
+
+
+## 7. Output and Warning Messages
+
+- Resolved issues with verbose output management for expectations and uninteresting calls.
+- Added more helpful messages when expectations run out of specified actions.
+- Improved output formatting for calls to void and non-void functions.
+
+
+## 8. Common Pitfalls and Workarounds
+
+- Clarified that commas in parameters require extra care in macro usage.
+- Warned about pitfalls in streaming custom types—mocked functions should not print values unnecessarily internally.
+- Added workarounds and notes for Microsoft Visual C++ warnings related to const qualifiers in parameters.
+- Guidance provided on how to disable or suppress warnings for uninteresting calls properly.
+
+
+## 9. Tests and Validation Enhancements
+
+- Added numerous test cases validating:
+  - Proper evaluation order of arguments in `EXPECT_CALL` and `ON_CALL`.
+  - Ordering constraints and sequence behaviors with `InSequence` and `After` clauses.
+  - Correct behavior of expectations when mocks are deleted early.
+  - Correct handling of duplicate `EXPECT_CALL`s and multiple default actions.
+  - Interaction between NiceMock, NaggyMock, and StrictMock under verbose output.
+
+
+## Practical Implications for Users
+
+- **Use `ON_CALL` for default behaviors and `EXPECT_CALL` to specify expectations explicitly.**
+- **Wrap complex argument types containing commas in parentheses or use type aliasing.**
+- **Mock methods must be declared in `public:` sections despite base class access levels.**
+- **Disambiguate overloaded methods using `Const()` or `using` declarations when needed to avoid compiler warnings or errors.**
+- **For uninteresting calls warnings, consider using `NiceMock` or set `EXPECT_CALL(...).Times(AnyNumber())` deliberately.**
+- **Prefer `WillOnce` and `WillRepeatedly` chaining for flexible repeated behavior definitions.**
+- **Control mock strictness via `NiceMock`, `NaggyMock`, and `StrictMock` to manage test failures and warnings.**
+- **Leverage sequences and expectation sets to enforce call orders or partial orders gracefully.**
+- **Use `Mock::VerifyAndClearExpectations` to verify mocks early in tests, especially when lifetime is uncertain.**
+- **Take caution to avoid premature deletions or unsynchronized access to mocks in multi-threaded tests.**
+
 
 ---
 
-## 3. Detailed Patch Examples
+For detailed documentation on mocking APIs, usage guidelines, and extension points, refer to:
 
-### Mock Method Declaration Fixes
+- [GoogleTest Mocking Reference](reference/mocking.md)
+- [gMock Cookbook](guides/real-world-integration/mock_cook_book)
+- [Expectations and Actions](api_reference/mocking_and_matchers/expectations_and_actions.md)
+- [Mock Object Creation](api_reference/mocking_and_matchers/mock_object_creation.md)
+- [Strictness and Nice Mocks](api_reference/mocking_and_matchers/strictness_and_nice_mocks.md)
+- [Argument Matching](api_reference/mocking_and_matchers/argument_matching.md)
 
-Fixes in the handling of `MOCK_METHOD` declarations now better support:
+For test output and assertion details, see:
 
-- Methods with complex types containing commas (e.g., `std::pair` or `std::map`).
-- Overloaded methods with `const` and non-`const` versions, preventing compiler warnings and ensuring correct matcher application.
+- [Assertions Reference](reference/assertions.md)
+- [Advanced GoogleTest Topics](docs/advanced.md)
 
-### Expectation Matching Enhancements
+For practical advice on test organization, mocking best practices, and troubleshooting:
 
-Adjustments to the processing order of expectations ensure:
+- [Mocking Best Practices Guide](guides/scenarios-patterns/mocking-best-practices.md)
+- [Quick Validation & Troubleshooting](getting_started/configuration_initial_success/quick_validation_troubleshooting.md)
 
-- More precise application of the "newer expectations override older ones" rule, reducing test flakiness.
-- Correct treatment of expectations with sequences and partial orders, even under concurrent mock invocations.
-
-### Strictness Wrapper Behavior
-
-Bug fixes enhance the behavior of `NiceMock`, `NaggyMock`, and `StrictMock` wrappers by:
-
-- Guaranteeing that uninteresting calls produce the expected warnings or failures according to the wrapper level.
-- Ensuring strict mocks consistently cause failures on unexpected calls, improving test reliability.
-
-### Delegation and Default Actions
-
-Improvements in delegation patterns include:
-
-- Correct support for delegating calls to fakes, real objects, or parent class methods without losing expectations tracking.
-- Enhanced `ON_CALL` and `EXPECT_CALL` interaction to respect default actions properly, avoiding spurious warnings.
-
----
-
-## 4. Common Pitfalls Addressed by Fixes
-
-- **Uninteresting Call Warnings:** Previously confusing or noisy warnings on methods without explicit expectations have been clarified and can be controlled via `--gmock_verbose` flag.
-- **Call Ordering & Sequences:** Fixes help prevent brittle tests when requiring calls in strict or partial orderings by making sequences and `After` clauses more robust.
-- **Mock Leaks:** Improvements allow proper detection and reporting of leaked mocks to improve test hygiene.
-- **Mocking Non-Virtual or Overloaded Functions:** Updated guidance and fixes ensure that mocking appears seamless for complicated method signatures and overloading scenarios.
-
----
-
-## 5. Troubleshooting Tips Using Patch Notes
-
-If your tests suddenly fail or behave differently after upgrading to a newer GoogleMock version:
-
-1. Review the patch notes relevant to your upgrade version to see if known issues affecting your code have been fixed.
-2. Examine changes around mocking method declarations or expectation matching if you mock complex interfaces.
-3. Check for alterations in strictness levels or default behaviors that might affect warnings or errors.
-4. Use the `--gmock_verbose=info` flag during test runs to get detailed call matching and expectation logs.
-5. Consult updated guides such as the [Mocking Reference](reference/mocking.md) and [gMock Cookbook](docs/gmock_cook_book.md) for new best practices influenced by bug fixes.
-
----
-
-## 6. Version History and Links to Release Notes
-
-For detailed bug fix listings per version and full release notes, refer to the official [GoogleTest GitHub releases page](https://github.com/google/googletest/releases). Here you can find:
-
-- Chronological history of releases.
-- Security patches and critical fixes announcements.
-- Feature additions disentangled from bug fixes.
-
----
-
-## 7. Best Practices to Leverage Bug Fixes
-
-- Always pin your test dependencies to a known version and read the patch notes before upgrading.
-- Use mock strictness wrappers (`NiceMock`, `StrictMock`) appropriately to catch issues early.
-- Apply sequences and partial order constraints thoughtfully; fixes improve reliability but test design matters.
-- Incorporate delegation patterns carefully for complex mock behavior; fixes reduce pitfalls.
-- Monitor warnings related to uninteresting calls and configure verbosity to filter noise appropriately.
-
----
-
-## 8. Additional Resources
-
-- [gMock Cookbook](docs/gmock_cook_book.md) — Recipes for advanced mocking scenarios and fixes.
-- [Mocking Reference](reference/mocking.md) — Full API details and examples of bug fixes effect.
-- [gMock Cheat Sheet](docs/gmock_cheat_sheet.md) — Quick syntax guide reflecting fixes and usage adjustments.
-- [FAQ on Mocking Failures & Setup](faq/common-issues-solutions/mocking-failures.mdx) — Troubleshooting common bugs.
 
 ---
 
 <Tip>
-Always check compatibility and patch notes when upgrading GoogleMock to understand bug fixes and avoid surprises in your tests.
+Keeping up with these bug fixes and patches ensures your test suite remains reliable, maintainable, and compatible with modern C++ standards and compiler behaviors. Regularly migrating to the latest GoogleTest and GoogleMock versions is recommended for improved diagnostics, performance, and feature enhancements.
 </Tip>
-
-<Note>
-If you encounter a regression or an unresolved issue, consider reporting it via the official GitHub [issue tracker](https://github.com/google/googletest/issues) with detailed reproducible cases.
-</Note>
-
----
-
-This page empowers you to deliver more stable and reliable tests by understanding the improvements and fixes behind each GoogleMock release.
-
----
