--- a/overview/core-concepts/concepts-terminology.mdx
+++ b/overview/core-concepts/concepts-terminology.mdx
@@ -1,191 +1,222 @@
 ---
-title: "Core Concepts and Terminology"
-description: "Demystify essential GoogleTest concepts such as test cases, test fixtures, assertions, matchers, mocks, and parameterized tests. Quickly become fluent in the vocabulary used by the framework and its documentation."
+title: "Core Concepts & Terminology"
+description: "Get fluent in the essential terminology of GoogleTest and GoogleMock: tests, test suites, fixtures, assertions, death tests, mocks, expectations, matchers, and actions. Understand how these building blocks fit into the workflow of writing and reading tests."
 ---
 
-# Core Concepts and Terminology
+# Core Concepts & Terminology
 
-Dive deep into the foundational vocabulary of GoogleTest to master its testing capabilities efficiently. In this guide, you'll explore essential concepts such as test cases, test fixtures, assertions, matchers, mocks, and parameterized tests. Understanding these terms will empower you to read the framework's documentation fluently and leverage its power to write robust, maintainable tests.
+## Understanding the Building Blocks of GoogleTest & GoogleMock
+
+To effectively write and read tests with GoogleTest and GoogleMock, it is essential to become fluent with the core terminology and concepts that form their foundation. These concepts represent the ingredients of your testing workflow and help you orchestrate powerful, maintainable tests.
 
 ---
 
-## What Are Test Cases and Test Fixtures?
+### Tests and Test Suites
 
-### Test Cases
-A *test case* is a logical grouping of tests that verify a certain aspect of your code. In GoogleTest, a test case usually corresponds to a class or module under test.
+- **Test:** A single test verifies a specific behavior or property of the code under test. It's a function that contains assertions checking conditions.
+- **Test Suite:** A collection of related tests grouped together to share setup, teardown, or context. It usually corresponds to a logical unit or class being tested.
 
-### Test Fixtures
-*Test fixtures* refer to the setup and teardown environment shared across multiple tests. This enables you to:
+**Why It Matters:** Organizing tests in suites provides structure and promotes code reuse, making your testing code more navigable and maintainable.
 
-- Initialize common objects before each test runs.
-- Clean up resources after test completion.
+---
 
-#### Example: Using Test Fixtures
+### Fixtures
 
+**Test Fixtures** provide a stable and reusable environment around your tests. They are classes derived from `testing::Test` that hold common setup and teardown logic along with shared data members.
+
+- Helps you avoid duplicating initialization and cleanup code across multiple tests.
+- Each test using a fixture is run with a fresh instance, ensuring test independence.
+
+**Example:** 
 ```cpp
-#include <gtest/gtest.h>
-
-class CalculatorTest : public ::testing::Test {
+class QueueTest : public testing::Test {
  protected:
+  Queue<int> q0_;
   void SetUp() override {
-    calc = new Calculator();
+    q0_.Enqueue(10);
   }
-
-  void TearDown() override {
-    delete calc;
-  }
-
-  Calculator* calc;
 };
 
-TEST_F(CalculatorTest, Addition) {
-  EXPECT_EQ(calc->Add(2, 3), 5);
+TEST_F(QueueTest, IsNotEmptyInitially) {
+  EXPECT_GT(q0_.size(), 0);
 }
 ```
 
-Here, `CalculatorTest` is a test fixture that prepares a `Calculator` object for testing. Each test using `TEST_F` shares this fixture, promoting DRY and consistent test setup.
-
 ---
-
-## Assertions and Matchers
 
 ### Assertions
-Assertions verify expected outcomes in your tests and express pass/fail conditions. Common assertions include:
 
-- `EXPECT_EQ(val1, val2)`: expects values to be equal.
-- `ASSERT_TRUE(condition)`: expects condition to be true and aborts the test if not.
+Assertions are your test’s checks—simple or complex conditions that verify if the code behaves as expected. Failures in assertions mark tests as failed.
 
-Assertions help communicate the intent clearly and detect failures accurately.
+- Use `EXPECT_` macros for non-fatal failures (test continues).
+- Use `ASSERT_` macros for fatal failures (test aborts immediately).
+
+**Example:**
+```cpp
+EXPECT_EQ(Add(2, 3), 5) << "Addition failed";
+ASSERT_TRUE(IsValid(user)) << "User validation failed";
+```
+
+---
+
+### Death Tests
+
+A special kind of test that verifies code terminates the process under certain error conditions (e.g., assertion failures).
+
+- Encapsulate potentially crashing code in a separate process.
+- Use macros like `EXPECT_DEATH()` and `ASSERT_DEATH()`.
+
+**Example:**
+```cpp
+EXPECT_DEATH(CheckNull(nullptr), "null pointer");
+```
+
+---
+
+### Mock Objects
+
+Mocks simulate parts of your system and allow you to verify interactions and control behaviors.
+
+- Implement interfaces using the `MOCK_METHOD` macros.
+- Set expectations with `EXPECT_CALL` about how the mock should be used.
+- Verify calls, call order, arguments, and more.
+
+**Why Use Mocks:** They isolate your unit under test, replace slow or complex dependencies, and enable precise control and verification.
+
+---
 
 ### Matchers
-Matchers are a powerful and expressive way to specify argument expectations in mock objects and parameter validations in assertions. Unlike simple equality, matchers allow you to specify complex conditions on arguments:
 
-- `_`: wildcard matcher that accepts any argument.
-- `Ge(5)`: expects a value greater than or equal to 5.
-- `HasSubstr("hello")`: expects a string containing "hello".
+Matchers define constraints on function arguments in both expectations (e.g., `EXPECT_CALL`) and assertions.
 
-#### Example: Using Matchers in Assertions
+- Allow flexible matching beyond literal values.
+- Common matchers: `_` (wildcard), `Eq()`, `Ge()`, `HasSubstr()`, and many more.
 
+**Example:**
 ```cpp
-EXPECT_THAT(my_vector, ::testing::ElementsAre(1, 2, 3));
-EXPECT_CALL(mock_obj, DoSomething(Ge(5), _));
+EXPECT_CALL(mock, Foo(Ge(10), _));  // First argument ≥ 10, second can be anything
+EXPECT_THAT(str, HasSubstr("needle"));  // Assert str contains "needle"
 ```
-
-Using matchers allows for precise, readable, and flexible specifications.
 
 ---
 
-## Mocks and Their Use
+### Actions
 
-### What Is a Mock?
-A *mock* is a test double that simulates the behavior of real objects by:
+Actions specify the behavior of mock methods when called.
 
-- Providing expected interfaces.
-- Allowing verification of interactions.
-- Controlling behavior via expectations and default actions.
+- `Return(value)`: Return a specific value.
+- `ReturnRef(variable)`: Return a reference.
+- `Invoke(function)`: Invoke a user function or lambda.
+- `DoAll(...)`: Combine multiple actions.
 
-Mocks are particularly valuable in interaction-based testing, where verifying **how** and **when** collaborators are used is as important as the final state.
+**Example:**
+```cpp
+EXPECT_CALL(mock, GetValue())
+    .WillOnce(Return(42))
+    .WillRepeatedly(Return(0));
+```
 
-### Creating Mock Classes
-Mocks are defined by inheriting from an interface or base class and using the `MOCK_METHOD` macro to specify mocked methods.
+---
+
+### Expectations
+
+These are assertions about how mocks are used.
+
+- Defined via `EXPECT_CALL`.
+- Specify argument matchers, call counts (`Times()`), order (`InSequence`, `After`), and actions.
+
+**Example:**
+```cpp
+EXPECT_CALL(mock, Process(_))
+    .Times(3)
+    .WillRepeatedly(Return(true));
+```
+
+---
+
+### Sticky Expectations and Uninteresting Calls
+
+- Mocks have "sticky" expectations by default: once an expectation matches a call, it remains active until saturated.
+- Calls not covered by any expectation are considered uninteresting and generate warnings but not failures.
+
+You can control the strictness using `NiceMock`, `NaggyMock`, and `StrictMock` wrappers.
+
+---
+
+### User Workflow Fit
+
+When you write tests with GoogleTest and GoogleMock, you usually follow this flow:
+
+1. Define what you want to test (**Tests** and **Test Suites**).
+2. Prepare your test environment (**Fixtures**).
+3. Use assertions to validate outcomes.
+4. For interaction testing, define **Mock Objects** with **Expectations**.
+5. Use **Matchers** to specify argument constraints.
+6. Use **Actions** to control mock behaviors.
+7. Employ **Death Tests** to validate fatal failure handling.
+
+---
+
+## Practical Example: Mocking a Turtle Interface Using GoogleMock
 
 ```cpp
-class MockDatabase : public Database {
+#include <gmock/gmock.h>
+
+class Turtle {
  public:
-  MOCK_METHOD(bool, Connect, (const std::string& uri), (override));
-  MOCK_METHOD(int, GetRecordCount, (), (const, override));
+  virtual ~Turtle() {}
+  virtual void PenUp() = 0;
+  virtual void PenDown() = 0;
+  virtual void Forward(int distance) = 0;
+  virtual void Turn(int degrees) = 0;
 };
-```
 
-### Controlling Behavior with ON_CALL and EXPECT_CALL
+class MockTurtle : public Turtle {
+ public:
+  MOCK_METHOD(void, PenUp, (), (override));
+  MOCK_METHOD(void, PenDown, (), (override));
+  MOCK_METHOD(void, Forward, (int distance), (override));
+  MOCK_METHOD(void, Turn, (int degrees), (override));
+};
 
-- `ON_CALL` sets default behavior but does not fail if not called.
-- `EXPECT_CALL` sets both behavior and expectations about calls.
+using ::testing::AtLeast;
+using ::testing::_;
+using ::testing::Return;
 
-### Nice, Naggy, and Strict Mocks
+TEST(DrawTest, DrawLine) {
+  MockTurtle turtle;
 
-- `NiceMock<T>`: suppresses warnings for uninteresting calls.
-- `NaggyMock<T>` (default): warns on uninteresting calls.
-- `StrictMock<T>`: treats uninteresting calls as test failures.
+  EXPECT_CALL(turtle, PenDown())
+      .Times(AtLeast(1));
+  EXPECT_CALL(turtle, Forward(_)).Times(1);
 
-#### Usage Example
-
-```cpp
-using ::testing::StrictMock;
-StrictMock<MockDatabase> mock_db;
-EXPECT_CALL(mock_db, Connect(_));
-// Test code that uses mock_db
-```
-
-### Tips for Mock Usage
-
-- Use `ON_CALL` to define general mock behavior.
-- Use `EXPECT_CALL` to enforce specific call expectations.
-- Avoid over-specification to keep tests maintainable.
-- Use `NiceMock` to reduce noise during test development.
-
----
-
-## Parameterized Tests
-
-Parameterized tests allow you to run the same test logic over a set of different inputs or types, reducing code duplication and increasing test coverage.
-
-### Using Parameterized Tests
-
-```cpp
-class FactorialTest : public ::testing::TestWithParam<std::tuple<int, int>> {};
-
-TEST_P(FactorialTest, ComputesCorrectly) {
-  int n, expected;
-  std::tie(n, expected) = GetParam();
-  EXPECT_EQ(Factorial(n), expected);
+  // Code under test that uses turtle
+  turtle.PenDown();
+  turtle.Forward(100);
 }
-
-INSTANTIATE_TEST_SUITE_P(
-    Factorials, FactorialTest,
-    ::testing::Values(
-        std::make_tuple(0, 1),
-        std::make_tuple(1, 1),
-        std::make_tuple(4, 24),
-        std::make_tuple(5, 120)));
 ```
 
-This runs `ComputesCorrectly` test for multiple input-output pairs.
+---
+
+## Summary
+
+Becoming familiar with these core terms and how they interact lays the foundation for mastering GoogleTest and GoogleMock. From defining simple tests to creating complex mock interactions, this vocabulary unlocks the full power of the framework and guides you toward writing clear, reliable, and maintainable C++ tests.
+
+
 
 ---
 
-## Vocabulary Quick Reference
+# Additional Resources
 
-| Term              | Description                                                           |
-|-------------------|-----------------------------------------------------------------------|
-| Test Case         | Group of related tests                                                 |
-| Test Fixture      | Setup/teardown environment for tests                                  |
-| Assertion         | Condition verification in tests                                       |
-| Matcher           | Predicate defining argument/parameter expectations                    |
-| Mock              | Test double that simulates real object with configurable behaviors     |
-| Parameterized Test | Test template covering multiple input sets                            |
+- Learn more about the full [product introduction](../overview/getting-started-value/product-intro).
+- Explore [common use cases and targeted audience](../overview/getting-started-value/audience-use-cases).
+- See detailed [feature overviews](../overview/getting-started-value/quick-features).
+- Deep dive into [mocking strategies and recipes](../docs/gmock_cook_book.md).
+- Understand [expectations and actions](../docs/reference/mocking.md).
+- Discover how to use [matchers effectively](../docs/reference/matchers.md).
 
 ---
 
-## Best Practices and Common Pitfalls
-
-- Always mock interfaces with virtual destructors to avoid undefined behavior.
-- Use `EXPECT_CALL` only when call ordering or frequency matters.
-- Suppress uninteresting call warnings using `NiceMock` during initial test development.
-- Avoid setting expectations after mocks are in use; set them upfront.
-- Leverage parameterized tests to avoid redundant test cases.
-- Use `.RetiresOnSaturation()` to prevent over-saturation errors with repeated calls.
-
----
-
-## Next Steps
-
-You are now equipped with a solid understanding of the terminology GoogleTest uses. To put it into practice, explore these pages:
-
-- [Your First Test: Quick Success](/getting-started/core-setup/first-test) to quickly write and run your initial tests.
-- [Feature Overview](/overview/core-concepts/feature-quick-overview) to see what GoogleTest can do at a glance.
-- [Introducing Mocking with GoogleMock](/guides/getting-started/integrate-mocking) for deeper mocking integration.
-
-Unlock the full power of GoogleTest by mastering these concepts and testing patterns.
+GoogleTest and GoogleMock empower C++ developers by providing expressive, automated testing and mocking capabilities. Mastering the core concepts described here is your first step toward writing tests that deliver confidence and accelerate development.
 
 ---
